--- a/styles/card.css
+++ b/styles/card.css
@@ -31,14 +31,15 @@
 .pokemon_image {
     height: 200px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 8px;
 }
 
-.pokemon_image img {
-    max-width: 100%;
-    max-height: 100%;
+.pokemon_image_img {
+    height: 80%;
+    width: 80%;
 }
 
 .pokemon_stats {
